--- a/src/components/layout/LinkButton.module.css
+++ b/src/components/layout/LinkButton.module.css
@@ -1,9 +1,29 @@
 .btn {
+    position: absolute;
+    bottom: 100px;
+    right: 50%;
+    transform: translateX(+50%);
+
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    border-radius: 7px;
     background-color: #222;
     color: #FFF;
-    padding: 0.5em 1em;
+    white-space: nowrap;
+
     text-decoration: none;
     transition: 0.5s;
+}
+
+@media (min-width: 992px) {
+    .btn{
+        bottom: calc(450px - 5vw);
+        right: 130px;
+        transform: translateX(0%);
+    }
 }
 
 .btn:hover {
