--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -1,18 +1,142 @@
 .navbar {
+    position: fixed;
+    /* Alterado para position */
+    top: 0;
+    /* Garante que ficará no topo da página */
+    left: 0;
+    /* Alinha à esquerda */
+    width: 100%;
+    /* Ocupa toda a largura */
     display: flex;
+    /* Ou outro valor apropriado para o layout */
     justify-content: space-between;
-    background-color: #333;
-    padding: 1em;
+    background-color: #000;
+    padding: 5px;
+    z-index: 50;
 }
+
+.logo {
+    padding-left: 10px;
+    width: 60px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+@media (min-width: 576px) {
+    .logo {
+        width: 60px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+}
+
+
+
+/* Botão do menu hambúrguer */
+.hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    z-index: 100;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.hamburger div {
+    width: 100%;
+    height: 3px;
+    background-color: #ffffff;
+    transition: 0.3s;
+}
+
+/* Menu deslizante */
+.menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s ease-in-out;
+    z-index: 99;
+    
+}
+
+/* Quando o menu estiver ativo */
+.menu.active {
+    top: 0;
+}
+
+/* Lista do menu deslizante */
+.menu .listMenu {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    
+}
+
+.menu .itemMenu {
+    margin: 1em 0;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.menu .itemMenu a {
+    color: #FFF;
+    text-decoration: none;
+}
+
+.menu .itemMenu a:hover {
+    color:#FFBB33;
+    transition: 0.7s;
+}
+
+/* Esconde o menu para telas maiores */
+@media (min-width: 576px) {
+    .hamburger {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+    }
+}
+
+
 
 .list {
-    display: flex;
-    list-style: none;
-    align-items: center;
+    display: none;
 }
 
-.item {
-    margin-right: 1em;
+@media (min-width: 576px) {
+    .list {
+        display: flex;
+        list-style: none;
+        align-items: center;
+    }
+}
+
+@media (min-width: 576px) {
+    .item {
+        margin-right: 1em;
+        font-size: small;
+    }
+}
+
+@media (min-width: 650px) {
+    .item {
+        font-size: medium;
+    }
 }
 
 .item a {
