--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -1,5 +1,5 @@
 .home_container {
-    width: 100vw;
+    width: 100%;
     display: relative;
     flex-direction: column;
     align-items: center;
@@ -12,8 +12,9 @@
     inset: 0;
     margin-left: auto;
     margin-right: auto;
-    top: 50px;
+    top: -100px;
     z-index: 20;
+    animation: slideDown 2s ease-out forwards;
 }
 
 @media (min-width: 992px) {
@@ -21,9 +22,19 @@
         width: 250px;
         position: absolute;
         inset: 0;
-        top: -50px;
+        bottom: 100px;
         margin: auto;
         z-index: 20;
+        animation: slideDown 2s ease-out forwards;
+    }
+}
+
+@keyframes slideDown {
+    0% {
+        top: -100px; /* Começa fora da tela, 100px acima */
+    }
+    100% {
+        top: 50px; /* Posiciona no local final */
     }
 }
 
@@ -51,7 +62,7 @@
 /* Large devices (lg - min-width: 992px) */
 @media (min-width: 992px) {
     .home_container_logo {
-        width: 40vw;
+        width: 40%;
         position: absolute;
         left: 50px;
         top: 200px;
