--- a/src/components/pages/Projects.module.css
+++ b/src/components/pages/Projects.module.css
@@ -1,9 +1,28 @@
 .project_container {
-    padding: 2em;
+    margin: auto;
+    padding: 1em;
+    margin-top: 80px;
+    width: 100%;
 }
 
 .title_container {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2em;
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+.projectsDiv {
+    display: block;
+}
+
+.projectsDiv_p {
+    margin: auto;
+    text-align: center;
+
+}
+
+@media (min-width: 576px) {
+    .projectsDiv {
+        display: flex;
+        flex-direction: row;
+    }
 }
