--- a/src/components/form/Select.module.css
+++ b/src/components/form/Select.module.css
@@ -11,7 +11,8 @@
 
 .form_control select {
     padding: .7em;
-    border-radius: 0;
+    border-radius: 5px;
     border: none;
     outline: none; 
+
 }
