--- a/src/components/layout/Cog.css
+++ b/src/components/layout/Cog.css
@@ -8,11 +8,12 @@
     justify-content: center; /* Centraliza o ícone horizontalmente */
     align-items: center; /* Centraliza o ícone verticalmente */
     z-index: 0; /* Coloca atrás do conteúdo */
+    overflow: visible;
 }
 
 .cog-icon {
     font-size: 2500px; /* Tamanho grande para o ícone */
-    color: rgba(254, 254, 254, 0.137); /* Cor preta com transparência */
+    color: rgba(254, 254, 254, 0.064); /* Cor preta com transparência */
     animation: rotate 20s linear infinite; /* Animação de rotação */
 }
 
