--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -17,6 +17,19 @@
     animation: slideDown 2s ease-out forwards;
 }
 
+@media (min-width: 576px) {
+    .home_container_img {
+        width: 150px;
+        position: absolute;
+        inset: 0;
+        margin-left: auto;
+        margin-right: auto;
+        top: -100px;
+        z-index: 20;
+        animation: slideDown 2s ease-out forwards;
+    }
+}
+
 @media (min-width: 992px) {
     .home_container_img {
         width: 250px;
@@ -34,7 +47,7 @@
         top: -100px; /* Começa fora da tela, 100px acima */
     }
     100% {
-        top: 50px; /* Posiciona no local final */
+        top: -20px; /* Posiciona no local final */
     }
 }
 
