--- a/src/components/pages/NewProject.module.css
+++ b/src/components/pages/NewProject.module.css
@@ -1,13 +1,16 @@
 .newproject_container {
     width: 450px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 3em;
+    margin-top: 50px;
 }
 
 .newproject_container h1 {
     margin-bottom: 0.5em;
+    font-size: 2.8em;
 }
 
 .newproject_container p {
-    color: #7b7b7b;
+    color: #fff;
 }
