--- a/src/components/pages/Project.module.css
+++ b/src/components/pages/Project.module.css
@@ -1,5 +1,8 @@
 .project_details {
     padding: 2em;
+    margin-top: 65px;
+    max-width: 100%;
+    margin-bottom: 7em;
 }
 
 .project_details h1, .project_details h2, .project_details p {
@@ -23,17 +26,20 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    gap: 5px;
 }
 
 .btn {
     background-color: #222;
     color: #FFF;
     padding: 0.5em 1em;
+    margin-bottom: 0.5em;
     text-decoration: none;
     transition: 0.5s;
     cursor: pointer;
     max-height: 40px;
     border: none;
+    z-index: 1;
 }
 
 .btn:hover {
