--- a/src/components/pages/Projects.module.css
+++ b/src/components/pages/Projects.module.css
@@ -3,11 +3,20 @@
     padding: 1em;
     margin-top: 80px;
     width: 100%;
+    margin-bottom: 7em;
 }
 
 .title_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     margin-bottom: 1em;
+}
+
+.title_container h1 {
+    font-size: 3em;
 }
 
 .projectsDiv {
@@ -24,5 +33,8 @@
     .projectsDiv {
         display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 }
