--- a/src/components/project/ProjectCard.module.css
+++ b/src/components/project/ProjectCard.module.css
@@ -1,4 +1,3 @@
-
 .project_card {
     margin: 1em;
     padding: 0.3em;
@@ -6,6 +5,7 @@
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+
 }
 
 .project_card h4 {
@@ -13,14 +13,15 @@
     color: #ffbb33;
     padding: 0.4em;
     margin-bottom: 1.3em;
-    font-size: 1em;
+    font-size: 1.3em;
 }
 
 .project_card p {
     color: #222;
     margin-bottom: 0.2em;
     padding-left: 0.5em;
-    font-size: 0.9em;
+    padding-right: 0.5em;
+    font-size: 1.0em;
 }
 
 .project_card p span {
@@ -68,21 +69,22 @@
     margin-left: 1em;
 }
 
-.project_card_actions a, .project_card_actions button {
+.project_card_actions a,
+.project_card_actions button {
     text-decoration: none;
-    background-color: #222;
-    color: #ffbb33;
-    font-size: .9em;
+    background-color: #ffbb33;
+    color: #222;
+    font-size: 1.2em;
     padding: .9em;
     margin-bottom: 0.5em;
     margin-left: 0.5em;
     cursor: pointer;
-    border: 1px solid #222;
+    border: 1px solid #ffbb33;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 0.5s;   
+    transition: 0.5s;
     text-align: center;
 }
 
@@ -94,20 +96,21 @@
     margin-right: .0em;
 }
 
-.project_card_actions a:hover, .project_card_actions button:hover {
+.project_card_actions a:hover,
+.project_card_actions button:hover {
     background-color: #222;
     color: #ffbb33;
 }
 
 @media (min-width: 576px) {
     .project_card {
+        width: auto;
         padding: 1em;
         border: 1px solid #222;
         border-radius: 5px;
-        width: 24%;
         margin: 0.5%;
     }
-    
+
     .project_card h4 {
         background-color: #222;
         color: #ffbb33;
@@ -115,22 +118,24 @@
         margin-bottom: 1.3em;
         font-size: 1.3em;
     }
-    
+
     .project_card p {
         color: #222;
         margin-bottom: 0.2em;
-        padding-left: 0.5em;
+
+        font-size: 1em;
+
     }
-    
+
     .project_card p span {
         font-weight: bold;
     }
-    
+
     .category_text {
         display: flex;
         align-items: center;
     }
-    
+
     .category_text span {
         display: block;
         width: 12px;
@@ -139,39 +144,41 @@
         background-color: #ccc;
         margin-right: 5px;
     }
-    
+
     .category_text .infra {
         background-color: #FFAEBC;
     }
-    
+
     .category_text .desenvolvimento {
         background-color: #A0E7E5;
     }
-    
+
     .category_text .design {
         background-color: #B4F8C8;
     }
-    
+
     .category_text .planejamento {
         background-color: #FBE7C6;
     }
-    
+
     .project_card_actions {
         margin-top: 1.2em;
         display: flex;
         align-items: center;
     }
-    
-    .project_card_actions a, .project_card_actions button {
+
+    .project_card_actions a,
+    .project_card_actions button {
         text-decoration: none;
         border: none;
-        background-color: #fff;
+        background-color: #ffbb33;
         color: #222;
         font-size: .9em;
         padding: .6em 1em;
         margin-right: 1em;
         cursor: pointer;
-        border: 1px solid #222;
+
+        border-radius: 3px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -181,12 +188,13 @@
     .project_card_actions span {
         display: block;
     }
-    
+
     .project_card_actions svg {
         margin-right: .5em;
     }
-    
-    .project_card_actions a:hover, .project_card_actions button:hover {
+
+    .project_card_actions a:hover,
+    .project_card_actions button:hover {
         background-color: #222;
         color: #ffbb33;
     }
