--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto Mono", serif;
+  
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+
   overflow-x: hidden;
 }
 
