--- a/src/components/layout/Message.module.css
+++ b/src/components/layout/Message.module.css
@@ -1,5 +1,5 @@
 .message {
-    width: 80vw;
+    width: 60vw;
     padding: 1em;
     border: 1px solid #000;
     margin: 0 auto;
@@ -9,13 +9,13 @@
 }
 
 .success {
-    color: #155724;
-    background-color: #d4edda;
-    border-color: #c3e6cb;
+    color: rgb(223, 237, 226);
+    background-color: #155724;
+    border-color: #155724;
 }
 
 .error {
-    color: #721c24;
-    background-color: #f8d7da;
-    border-color: #f5c6cb;
+    color: rgb(244, 213, 216);
+    background-color: #b94c44;
+    border-color: #b94c44;
 }
