--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -80,9 +80,11 @@
 .menu {
     position: fixed;
     top: -100%;
-    left: 0;
-    width: 100%;
-    height: 50%;
+    right: 0;
+    width: 60%;
+    height: 100%;
+    padding: 20px;
+    border-left: solid 2px #FFBB33;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(5px);
     display: flex;
@@ -90,8 +92,8 @@
     justify-content: center;
     align-items: center;
     transition: 0.5s ease-in-out;
-    z-index: 99;
-    
+    z-index: 99;    
+
 }
 
 /* Quando o menu estiver ativo */
@@ -102,17 +104,50 @@
 /* Lista do menu deslizante */
 .menu .listMenu {
     display: flex;
-    flex-direction: column;
-    list-style: none;
-    padding: 0;
-    
+    flex-direction: column;    
+    align-items: end;
+    justify-content: center;
+    padding: 20px;
 }
 
-.menu .itemMenu {
-    margin: 1em 0;
+.itemMenu {
+    display: flex;
+    align-items: center; /* Alinha verticalmente os itens */
+    
+    margin: 0.7em 0;
     font-size: 1.5em;
-    text-align: center;
+    width: fit-content;
 }
+
+.itemMenuTip {
+    font-size: 0.9em;
+    color: white;
+    width: 70%;
+    text-align: end;
+    margin-top: 20px;
+}
+
+.itemMenuTip a {
+    color: #FFBB33;
+    text-decoration: none;
+}
+
+.itemMenuTip a:hover {
+    color: #ba8824;
+}
+
+.itemMenu a {
+    display: flex; /* Aplica flexbox no link */
+    align-items: center; /* Alinha o ícone e o texto verticalmente */
+    justify-content: center; /* Alinha o ícone e o texto horizontalmente */
+    text-decoration: none;
+    color: inherit; /* Garante que a cor do texto não seja sobrescrita */
+}
+
+.itemMenu span {
+    margin-right: 15px; /* Ajuste o espaço entre o ícone e o texto, se necessário */
+}
+
 
 .menu .itemMenu a {
     color: #FFF;
@@ -122,6 +157,44 @@
 .menu .itemMenu a:hover {
     color:#FFBB33;
     transition: 0.7s;
+}
+
+.itemMenuBtn {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 1.5em;
+    align-items: center;
+    border: none;
+    transition: 0.3s;
+}
+
+.itemMenuBtn:hover {
+    background: #FFBB33;
+}
+
+.itemMenuBtn span {
+    font-size: 0.8em; /* Ajuste apenas para o texto */
+    margin-left: 8px; /* Espaço entre o ícone e o texto */
+}
+
+.itemBtn {
+    display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 1.5em;
+    align-items: center;
+    border: none;
+    transition: 0.3s;
+}
+
+.itemBtn:hover {
+    background: #FFBB33;
+}
+
+.itemBtn span {
+    font-size: 0.7em; /* Ajuste apenas para o texto */
+    margin-left: 8px; /* Espaço entre o ícone e o texto */
 }
 
 /* Esconde o menu para telas maiores */
