--- a/src/components/pages/Project.module.css
+++ b/src/components/pages/Project.module.css
@@ -20,7 +20,7 @@
 }
 
 .details_container, .service_form_container {
-    border-bottom: 1px solid #7a7a7a;
+    border-bottom: 1px solid #222222;
     margin-bottom: 1.2em;
     padding-bottom: 1.2em;
     display: flex;
