--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@
 html, body, #root {
   background: radial-gradient(circle, #be9362, #4d3110);
   height: 100vh; 
-  
+  font-family: "Open Sans", serif;
 }
 
